--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ Marketing    </div>
     <div class="row">
       <div class="col-xs-4 col-xs-offset-4">
         <div class="thumbnail">
-          <a href="https://www.youtube.com/watch?v=7VlwLksy0g4" target="_blank">
+          <a href="https://www.youtube.com/watch?v=iBGbEq25b6c" target="_blank">
             <img src="https://s30.postimg.org/u726gf9o1/Logo_PSD_v2.jpg" alt="IDF Logo Artsplash" style="widht:100%">
             <div class="text-center caption">IDF Logo
             </div>
