updated how to digital blog logo

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ Marketing    </div>
           </div>
           <div class="col-xs-6">
             <div class="thumbnail">
-              <a href="https://howtodigitalcom.wordpress.com/" target="_blank">
+              <a href="https://howtodigital.blog" target="_blank">
                 <img src="https://howtodigitalcom.files.wordpress.com/2016/12/go-trip-wander-travel-hiker-suitcase-traveler-1607078.jpg?w=900" alt="How To Digital Blog" style="width:100%">
                 <div class="text-center caption">How to Digital
                 </div>
