updated how to digital links

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
      <i class="fa fa-twitter" aria-hidden="true"></i>
    </a>
    
-   <a href="https://howtodigitalcom.wordpress.com/the-beginning/" target="_blank" class="btn wordpress">
+   <a href="https://howtodigital.blog/the-beginning/" target="_blank" class="btn wordpress">
      <i class="fa fa-wordpress" aria-hidden="true"></i>
    </a>
    
