updated how to digital link

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <div class="col-xs-4">
       I love to have rides <b>out of the comfort zone</b>     </div>
     <div class="col-xs-4">
-      Have you checked my <b><a href="https://howtodigitalcom.wordpress.com/the-beginning/" target="_blank">52-week challenge</b></a>?
+      Have you checked my <b><a href="https://howtodigital.blog/the-beginning/" target="_blank">52-week challenge</b></a>?
     </div>
     <div class="col-xs-4">
       I <b>created</b> this website <b>10 days</b> after I started learning code    </div>
