secured https links on how to digital blog

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
      <i class="fa fa-twitter" aria-hidden="true"></i>
    </a>
    
-   <a href="https://howtodigital.blog/the-beginning/" target="_blank" class="btn wordpress">
+   <a href="https://howtodigitalcom.wordpress.com/the-beginning/" target="_blank" class="btn wordpress">
      <i class="fa fa-wordpress" aria-hidden="true"></i>
    </a>
    
@@ -188,7 +188,7 @@
     <div class="col-xs-4">
       I love to have rides <b>out of the comfort zone</b>     </div>
     <div class="col-xs-4">
-      Have you checked my <b><a href="https://howtodigital.blog/the-beginning/" target="_blank">52-week challenge</b></a>?
+      Have you checked my <b><a href="https://howtodigitalcom.wordpress.com/the-beginning/" target="_blank">52-week challenge</b></a>?
     </div>
     <div class="col-xs-4">
       I <b>created</b> this website <b>10 days</b> after I started learning code    </div>
@@ -243,7 +243,7 @@ Marketing    </div>
           </div>
           <div class="col-xs-6">
             <div class="thumbnail">
-              <a href="https://howtodigital.blog" target="_blank">
+              <a href="https://howtodigitalcom.wordpress.com" target="_blank">
                 <img src="https://howtodigitalcom.files.wordpress.com/2016/12/go-trip-wander-travel-hiker-suitcase-traveler-1607078.jpg?w=900" alt="How To Digital Blog" style="width:100%">
                 <div class="text-center caption">How to Digital
                 </div>
